--- a/Projects/xxdCmdb/web/templates/project_list.html
+++ b/Projects/xxdCmdb/web/templates/project_list.html
@@ -173,12 +173,15 @@
     <script>
         $(function () {
             $.initMenu('#menu_list');
-            $.nbDataList('/projects_list.html');
+            $.nbDataList('/projects_list.html', '1');
             $('#table_body').attr('edit-mode', 'true');
 
             // 项目列表刷新数据定时器
             var t1 = window.setInterval(do_reload, 100);
         });
+        function ChangePage(id) {
+                $.nbDataLists(id);
+            }
 
         // 进入项目列表页面 定时刷新检查后台发布任务状态
         function do_reload() {
