--- a/Projects/xxdCmdb/web/templates/project_list.html
+++ b/Projects/xxdCmdb/web/templates/project_list.html
@@ -12,60 +12,40 @@
     <div style="padding: 5px 8px;">
 
         <div class="list-block">
-{#            <div class="clearfix search-area">#}
-{##}
-{#                <div class="col-md-offset-10 do-submit">#}
-{#                    <a id="search_condition_submit" class="btn btn-primary no-radius">#}
-{#                        <i class="fa fa-search"></i> 搜索#}
-{#                    </a>#}
-{#                </div>#}
-{##}
-{#                <div id="search_conditions" class="col-md-offset-2 col-md-8">#}
-{#                    <div class="condition">#}
-{#                        <div class="icons">#}
-{#                            <a class="btn btn-default no-radius" onclick="$.AddSearchCondition(this)"><i#}
-{#                                    class="fa fa-plus-square"></i></a>#}
-{#                        </div>#}
-{#                        <div class="inputs">#}
-{#                            <div class="input-group">#}
-{#                                <div id="search_condition" init="false" class="input-group-btn">#}
-{#                                    <label type="button" class="btn btn-default no-radius" style="width: 100px;">&nbsp;</label>#}
-{#                                    <button type="button" class="btn btn-default dropdown-toggle no-border-r" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></button>#}
-{#                                    <ul class="change-search-condition dropdown-menu">#}
-{##}
-{#                                    </ul>#}
-{#                                </div>#}
-{##}
-{##}
-{#                            </div>#}
-{##}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{##}
-{#            </div>#}
-
-{#            <div class="clearfix function-area">#}
-{#                <div class="btn-group btn-group-sm custom-btn-group">#}
-{#                    <a id="check_all" class="btn btn-default no-radius"><i#}
-{#                            class="fa fa-check-square"></i> 全选</a>#}
-{#                    <a id="check_cancel" class="btn btn-default no-radius"><i class="fa fa-minus-square-o"></i> 取消</a>#}
-{#                    <a id="check_reverse" class="btn btn-default no-radius"><i#}
-{#                            class="fa fa-check-square-o"></i> 反选</a>#}
-{#                    <a class="btn btn-default no-radius" href="#"><i class="fa fa-plus-circle"></i>添加</a>#}
-{#                    <a id="do_delete" class="btn btn-default no-radius"><i class="fa fa-trash"></i> 删除</a>#}
-{#                    <a id="edit_mode_target" class="btn btn-default no-radius"><i class="fa fa-pencil-square-o"></i>#}
-{#                        <span>进入编辑模式</span></a>#}
-{#                    <a id="do_save" class="btn btn-default no-radius"><i class="fa fa-floppy-o"></i> 保存</a>#}
-{#                    <a id="do_refresh" class="btn btn-default no-radius"><i class="fa fa-refresh"></i> 刷新</a>#}
-{#                    <a id="handle_status" class="btn no-radius" tabindex="0" role="button" data-toggle="manual"#}
-{#                       data-trigger="focus" data-container="body" data-html="true" data-placement="bottom" title="错误详细"#}
-{#                       data-content=""></a>#}
-{#                </div>#}
-{#            </div>#}
-
             <div class="table-responsive table-area">
                 <table class="table table-striped table-bordered">
+
+                <!-- 回滚确定模态对话框 -->
+                <div id="release_roll_back" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                                <h4 class="modal-title">回滚发布任务</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>最近一次成功发布</p>
+
+                                <a id="confirm_id" style="display: none;"></a>
+                                <a id="confirm_env_id" style="display: none;"></a>
+                                发布环境：<a id="confirm_env"></a>
+                                </br>
+                                发布分支：<a id="confirm_branch"></a>
+                                </br>
+                                发布时间：<a id="confirm_time"></a>
+                                </br>
+
+
+                                <p>是否确认回滚？</p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                                <button id="roll_confirm" type="button" class="btn btn-primary" onclick="roll_confirm()">确定</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                     <!-- 表格标题开始 -->
                     <thead id="table_head">
                     <tr>
@@ -82,41 +62,6 @@
 
                 </table>
 
-{#                <table class="table table-striped table-bordered">#}
-{#                    <thead id="table_head">#}
-{#                    <tr>#}
-{#                        <th>序号</th>#}
-{#                        <th>项目名称</th>#}
-{#                        <th>环境</th>#}
-{#                        <th>业务线</th>#}
-{#                        <th>最新发布时间</th>#}
-{#                        <th>发布ID</th>#}
-{#                        <th style="width: 62px;">状态</th>#}
-{#                        <th>操作</th>#}
-{#                    </tr>#}
-{#                    </thead>#}
-{#                <thead id="table_bodys">#}
-{#                {% for obj in data_list %}#}
-{#                    <tr>#}
-{#                        <th>{{ forloop.counter }}</th>#}
-{#                        <td>{{ obj.project_name }}</td>#}
-{#                        <td>{{ obj.business_1 }}</td>#}
-{#                        <td>{{ obj.business_2 }}</td>#}
-{#                        <td>{{ obj.ctime|date:"Y-m-d H:i:s" }}</td>#}
-{#                        <td>{{ obj.release_id }}</td>#}
-{#                        <td style="width: 100px" >{{ obj.get_status_display }}</td>#}
-{#                        <td style="width: 200px; font-size: 13px; line-height: 25px;">#}
-{#                            <i class="fa fa-edge" aria-hidden="true"></i>#}
-{#                            <a href="#" onclick="edit_group(this, {{ obj.id }})">上线</a> |#}
-{#                            <i class="fa fa-reply-all" aria-hidden="true"></i>#}
-{#                            <a href="#" onclick="del_group({{ obj.id }})">回滚</a>#}
-{#                        </td>#}
-{#                    </tr>#}
-{#                {% endfor %}#}
-{#                </thead>#}
-{##}
-{#                </table>#}
-
                 <div class="clearfix">
                     <div class="right">
                         <ul id="pager" class="pagination pagination-sm no-margin">
@@ -126,14 +71,13 @@
             </div>
         </div>
 
-        <div id="release_div" style="display: none">
+        <div id="release_div" style="display: none;">
             <span class="label label-primary">发布日志</span>
             <div style="border: solid rgb(47,114,171) 1px; height: auto"></div>
             <div id="release_log"></div>
 {#            {% for item in response.data.data_list %}#}
 {#                <a href="#">{{ item.msg }}</a>#}
 {#            {% endfor %}#}
-
         </div>
 
     </div>
@@ -221,9 +165,7 @@
             $('#table_body').attr('edit-mode', 'true');
 
             // 项目列表刷新数据定时器
-{#            var t1 = window.setTimeout(do_reload, 100);#}
-            var t1 = window.setTimeout(do_ajax, 100);
-
+            var t1 = window.setTimeout(do_ajax, 200);
         });
 
         function do_ajax() {
@@ -231,14 +173,10 @@
             var list_v = [];
             $('#table_body').children().each(function () {
                 i = i + 1;
-{#                var str_id = 'status' + i;#}
-{#                var jquery_id = '#status' + i;#}
                 var v = $(this).children().next().next().next().next().next().next().next().html();
                 var obj_id = $(this).children().next().html();
                 var s = 'do_release(this,' + obj_id + ')';
                 if(v!='-'){
-{#                    $(this).children().next().next().next().next().next().next().next().next().next().attr('id', str_id);#}
-{#                    $(this).children().next().next().next().next().next().next().next().next().next().next().attr('id', '');#}
                     list_v.push(v)
                 }
             });
@@ -292,20 +230,83 @@
 
         function ChangePage(id) {
                 $.nbDataLists(id);
-                var t1 = window.setTimeout(do_ajax, 100);
+                var t1 = window.setTimeout(do_ajax, 200);
 
             }
 
+        // 中断发布
+        function do_break(ths, id) {
+            var bread_id = $(ths).parent().prev().prev().prev().html();
+            $.ajax({
+                url: '/project_list.html',
+                type: 'POST',
+                data: {'break_id': bread_id},
+                dataType: 'JSON',
+                success: function (response) {
+                    if(response.status){
+                        alert('发布任务中断成功！');
+                        var t1 = window.setTimeout(do_ajax, 200);
+                    }
+                }
+            })
+        }
+
+        function roll_back(ths, id) {
+            var release_env = $(ths).parent().prev().prev().prev().prev().prev().children().val();
+            if(release_env=='1'){
+                alert('未选择回滚环境');
+                return false
+            }else{
+                $('#confirm_env_id').text(release_env)
+            }
+            $.ajax({
+                url: '/project_list.html',
+                type: 'POST',
+                data: {'roll_back': id, 'release_env': release_env},
+                dataType: 'JSON',
+                success: function (response) {
+                    if(response.status){
+                        $('#confirm_branch').text(response.data.branch);
+                        $('#confirm_time').text(response.data.time);
+                        $('#confirm_env').text(response.data.env);
+                        $('#confirm_id').text(id);
+                        $('#release_roll_back').modal();
+                    }else {
+                        alert('未查询到可用回滚分支')
+                    }
+                }
+            })
+        }
+        
+        // 确认回滚
+        function roll_confirm() {
+            $('#release_roll_back').hide();
+            var id = $('#confirm_id').text();
+            var release_env = $('#confirm_env_id').text();
+            var release_branch = $('#confirm_branch').text();
+            var user_name = $.cookie('username');
+
+            $.ajax({
+                    url: '/projects_list.html',
+                    type: 'POST',
+                    data: {'id': id, 'release_env': release_env, 'release_branch': release_branch, 'user_name': user_name},
+                    dataType: 'JSON',
+                    success: function (response) {
+                        if (response.status){
+                            location.reload()
+                        } else {
+                            alert(response.message);
+                        }
+                    }
+                })
+        }
 
         // 点击发布按钮 进行数据校验 + 后台创建发布任务 + 前端更新该行数据发布ID和发布时间
         function do_release(ths, id) {
-
             var release_env = $(ths).parent().prev().prev().prev().prev().prev().children().val();
             var release_branch = $(ths).parent().prev().prev().prev().prev().children().val();
-
             var v = $(ths).parent().prev().prev().prev().prev().prev().prev().prev().prev().prev().prev().html();
             var s = '#status' + v;
-
             var user_name = $.cookie('username');
 {#            var reg = /^[0-9a-zA-Z_//./*]*$/g;#}
 
@@ -316,7 +317,6 @@
             else if(release_branch==''){
                 alert('分支不能为空...');
                 return false;
-
 {#            else if(release_branch==''||reg.test(release_branch)==false){#}
 {#                alert('项目发布【分支】不能为空且分支名格式不能包含非法字符...');#}
 {#                return false;#}
@@ -359,9 +359,9 @@
                                 var reg = /^http*/;
                                 if(reg.test(v['msg'])==false){
                                     var ft_time = fmTime(v['time']);
-                                    var s = '<p style="display: inline-block">' + '[' + ft_time + ']' + '&nbsp&nbsp' + '</p>' + '<a style="text-decoration: none">' + v['msg'] +'</a><br>';}
+                                    var s = '<p style="display: inline-block">' + '[ ' + ft_time + ' ]' + '&nbsp&nbsp' + '</p>' + '<a style="text-decoration: none">' + v['msg'] +'</a><br>';}
                                 else{
-                                    var s = '<p style="display: inline-block">' + '[' + ft_time + ']' + '&nbsp&nbsp' + '</p>' + '<a style="text-decoration: none" href="' + v['msg'] + '" target="_blank">' + v['msg'] +'</a><br>';
+                                    var s = '<p style="display: inline-block">' + '[ ' + ft_time + ' ]' + '&nbsp&nbsp' + '</p>' + '<a style="text-decoration: none" href="' + v['msg'] + '" target="_blank">' + v['msg'] +'</a><br>';
                                 }
                                 $('#release_log').append(s);
                             })
