--- a/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
@@ -79,7 +79,7 @@
     </div>
 </div>
 <script type="text/javascript" src="/static/js/jquery-1.12.4.js"></script>
-<script type="text/javascript" src="/static/js/jquery.treemenu.js"></script>
+{#<script type="text/javascript" src="/static/js/jquery.treemenu.js"></script>#}
 <script>
 $(function(){
         $("#business").click(function () {
