--- a/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
+++ b/Projects/xxdCmdb/web/templates/layout/_laybusiness.html
@@ -46,6 +46,10 @@
             <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>上线记录</span>
         </a>
+        <a id="menu_config" class="menu-item" href="/config.html">
+            <i class="fa fa-cog" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>配置修改</span>
+        </a>
         <a class="menu-item" href="/read.html">
             <i class="fa fa-map-o" aria-hidden="true"></i>
             <span>资产查询</span>
