--- a/Projects/xxdCmdb/web/templates/layout/_layread.html
+++ b/Projects/xxdCmdb/web/templates/layout/_layread.html
@@ -34,9 +34,21 @@
             <i class="fa fa-th-list" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>项目列表</span>
         </a>
-        <a id="menu_online" class="menu-item" href="/release.html">
+        <a id="menu_online" class="menu-item" href="/apply.html">
             <i class="fa fa-ioxhost" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
             <span>申请记录</span>
+        </a>
+        <a id="menu_audit" class="menu-item" href="/audit.html">
+            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>P M 审核</span>
+        </a>
+        <a id="menu_audit" class="menu-item" href="/audit.html">
+            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>D B 审核</span>
+        </a>
+        <a id="menu_audit" class="menu-item" href="/audit.html">
+            <i class="fa fa-connectdevelop" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
+            <span>S A 审核</span>
         </a>
         <a id="menu_online" class="menu-item" href="/release.html">
             <i class="fa fa-cloud-upload" aria-hidden="true" style="width: 14px; margin-left: 1px"></i>
